Linking to dev.to instead of medium

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ title: Enchantobot
         </a>
       </li>
       <li>
-	<a href="http://www.medium.com/@jonskulski"><span class="icon icon--medium"><svg viewBox="0 0 512 512" height="100%" width="100%" preserveAspectRatio="xMinYMin meet" ><g><path d="M481.083,0H28.451C15.003,5.576,4.538,16.854,0,30.833v446.528C6.521,497.458,25.33,512,47.552,512h414.427 C489.611,512,512,489.549,512,461.854V46.344C512,25.431,499.229,7.524,481.083,0z M383.056,187.625h-9.958 c-3.695,0-7.959,4.851-7.959,8.271v123.993c0,3.431,4.264,8.556,7.959,8.556h9.958v28.792h-89.278v-28.792h17.91V198.174h-0.854 l-44.069,159.062h-34.125l-43.503-159.062h-0.854v130.271h18.768v28.792H131.42v-28.792h9.663c3.983,0,8.25-5.125,8.25-8.556 V195.896c0-3.42-4.267-8.271-8.25-8.271h-9.663v-29.931h94.399l30.989,115.736h0.854l31.274-115.736h94.118V187.625z"></path></g></svg></span></a>
-	<a href="http://www.medium.com/@jonskulski">
-	  <span class="username">I write about software</span>
-	</a>
+          <a href="https://dev.to/jskulski">
+              <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Jon Skulski's DEV Profile" height="64" width="64" />
+              <span class="username">I write about software</span>
+          </a>
       </li>
       <li>
 	<a href="https://twitter.com/{{ site.twitter_username }}"><span class="icon  icon--twitter"><svg viewBox="0 0 16 16"><path d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809 c-0.632,0.375-1.332,0.647-2.076,0.793c-0.596-0.636-1.446-1.033-2.387-1.033c-1.806,0-3.27,1.464-3.27,3.27 c0,0.256,0.029,0.506,0.085,0.745C5.163,5.404,2.753,4.102,1.14,2.124C0.859,2.607,0.698,3.168,0.698,3.767 c0,1.134,0.577,2.135,1.455,2.722C1.616,6.472,1.112,6.325,0.671,6.08c0,0.014,0,0.027,0,0.041c0,1.584,1.127,2.906,2.623,3.206 C3.02,9.402,2.731,9.442,2.433,9.442c-0.211,0-0.416-0.021-0.615-0.059c0.416,1.299,1.624,2.245,3.055,2.271 c-1.119,0.877-2.529,1.4-4.061,1.4c-0.264,0-0.524-0.015-0.78-0.046c1.447,0.928,3.166,1.469,5.013,1.469 c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/></svg></span></a>
